--- a/resources/sass/_header.scss
+++ b/resources/sass/_header.scss
@@ -1,8 +1,7 @@
 .header {
   padding: 2rem 3rem;
-  background-color: #925b08;
+  background-color: $main-color;
   color: #fff;
-  position: sticky;
   top: 0;
   margin-bottom: 1rem; 
 
