--- a/resources/sass/_sider.scss
+++ b/resources/sass/_sider.scss
@@ -1,15 +1,13 @@
-$hg-text-color: rgba(#fff, 0.5);
-$hg-background-color: rgba(#fff, 0.075);
-
 .sider {
   display: flex;
   flex-direction: column;
-  background-color: lighten(complement(#925b08), 25%);
+  background-color: lighten($secondary-color, 25%);
   padding: 1rem;
   border-radius: 0.5rem;
   width: 20%;
   min-width: 20%;
   margin: 0 1rem;
+  color: #fff;
   
   ul {
     list-style: none;
@@ -18,6 +16,7 @@ $hg-background-color: rgba(#fff, 0.075);
   
   li {
     border-bottom: 1px solid transparent;
+    color: #fff;
 
     &:hover {
       cursor: pointer;
@@ -31,5 +30,20 @@ $hg-background-color: rgba(#fff, 0.075);
 @media (max-width: 1200px) {
   .sider {
     width: calc(40vw - 1rem);
+    min-width: calc(40vw - 1rem);
+  }
+}
+
+@media (max-width: 1200px) {
+  .sider {
+    width: calc(40% - 1rem);
+    min-width: calc(40% - 1rem);
+  }
+}
+
+@media (max-width: 767px) {
+  .sider {
+    width: calc(100% - 2rem);
+    min-width: calc(100% - 2rem);
   }
 }
